# meta_scaler

./: .env.example  .gitignore  BLOG.md  README.md  client.py  fix_notebook_newlines.py  format_fix.py  models.py  openenv.yaml  pyproject.toml  rebuild_nb.py  requirements.txt  sub_readme.md  update.py  update_labels.py
docs/: CLAUDE_CONTEXT.md  CODEBASE_GUIDE.md  DETAILS.md  WRITEUP.md  plan.md
docs/plots/: README.md  metrics.json
hf_space/: DEPLOY.md  Dockerfile  README.md
scenarios/: b2c_saas.json  consumer_app.json  enterprise_saas.json  fintech.json  marketplace.json
server/: app.py  cofounder_environment.py  competitor.py  founder.py  investor.py  market.py  marketing_manager.py  pivot_environment.py  product_manager.py  prompt_encoder.py  reward.py  runway.py  signals.py  team_manager.py  wandb_logger.py
static/: chat.html  index.html
training/: baseline_agent.py  curriculum.py  evaluate.py  market_data.py  train_colab.ipynb  train_colab_3b_advisor.ipynb  train_colab_3b_conversational.ipynb  train_colab_7b.ipynb  train_colab_fast.ipynb  train_colab_quick.ipynb  train_trl.ipynb
