[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "the-pivot"
version = "0.1.0"
description = "OpenEnv RL environment: startup founder pivot simulation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "wandb>=0.17.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
